# gpa-assistant

./: .gitignore  algorithms.py  fastapi.py  main.py  models.py  parser.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/gpa_assist/: algorithms.py  fastapi.py  models.py  parser.py
backend/tests/: conftest.py
backend/tests/e2e/pages/: analysis_page.py  home_page.py
backend/tests/e2e/test_files/: MyU.html
backend/tests/e2e/tests/: test_analysis.py  test_home.py  test_inputs.py
backend/tests/unit/: test_algorithms.py  test_models.py  test_parser.py
e2e/: conftest.py  constants.py
e2e/pages/: home_page.py
e2e/tests/: test_home.py
gpa_assist/: algorithms.py  config.py  fastapi.py  parser.py
react-e2e/: pyproject.toml
react-e2e/pages/: analysis_page.py
streamlit-e2e/: conftest.py  constants.py  pyproject.toml
streamlit-e2e/pages/: analysis_page.py  home_page.py
streamlit-e2e/tests/: test_analysis.py  test_home.py  test_inputs.py
web/: package-lock.json  package.json  pytest.ini
web/e2e/: conftest.py
web/e2e/pages/: base_page.py
web/e2e/reports/: report.html
web/e2e/tests/: test_analysis.py  test_inputs.py
web/src/: App.tsx  index.css
web/src/components/: AmbientBackground.tsx  Dashboard.tsx  Hero.tsx  LiquidEther.tsx  ProjectInfo.tsx  Questions.tsx  Steps.tsx  UploadZone.tsx
web/src/lib/: gpa-engine.ts
