[project]
name = "gpa-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.27",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
